--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
    padding: 0;
    margin: 0;
-   font-family: 'Inter', sans-serif;
+   font-family: pretendard variable, sans-serif;
    background-color: var(--nextui-colors-accents0);
    /* transition: background-color 0.2s ease; */
 }
