--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,20 @@ body {
    --background: black;
    --foreground: white;
  } */
+
+ .container-power{
+   position: absolute;
+   top: 100px;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   z-index: 999;
+ }
+ .curvalue{
+   color: #17c964;
+   font-size:28px;
+ }
